--- a/styles.css
+++ b/styles.css
@@ -1,32 +1,42 @@
 body {
     background-color: black;
-    background-image: radial-gradient(
+    background-image:
+    radial-gradient(
       rgba(0, 150, 0, 0.75), black 120%
     );
-    height: 100vh;
-
+    background-attachment: fixed;
+    height: 100%;
     color: white;
     font: 1.3rem Inconsolata, monospace;
     text-shadow: 0 0 5px #C8C8C8;
 }
 
-body::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: repeating-linear-gradient(
-      0deg,
-      rgba(black, 0.15),
-      rgba(black, 0.15) 1px,
-      transparent 1px,
-      transparent 2px
-    );
-  }
+body::after{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image:
+   repeating-linear-gradient(
+  0deg,
+  rgba(0,0,0, 0.15),
+  rgba(0,0,0, 0.15) 1px,
+  transparent 1px,
+  transparent 2px
+  );
+}
 
-  ::selection {
-    background: #0080FF;
-    text-shadow: none;
-  }
+::selection {
+  background: #0080FF;
+  text-shadow: none;
+}
+
+header{
+  margin: 0px 60px 10px;
+}
+
+main{
+  margin: 0px 60px 10px;
+}
