--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     background-color: black;
     background-image:
     radial-gradient(
-      rgba(0, 150, 0, 0.75), black 120%
+      rgba(39, 39, 39, 0.75), black 120%
     );
     background-attachment: fixed;
     height: 100%;
@@ -13,9 +13,8 @@ body {
 
 body::after{
   content: "";
-  position: absolute;
+  position: sticky;
   top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
   background-image:
@@ -34,9 +33,21 @@ body::after{
 }
 
 header{
-  margin: 0px 60px 10px;
+  margin: 0px 5em 10px;
 }
 
 main{
   margin: 0px 60px 10px;
+}
+
+.navbar{
+  position: sticky;
+  top: 90%;
+  width: 100%;
+  height: 10%;
+  background-color: rgb(0, 0, 0);
+
+  text-align: center;
+  padding-top: 20px;
+   
 }
