--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,9 @@ body {
 
 body::after{
   content: "";
-  position: sticky;
+  position: absolute;
   top: 0;
+  display: inline-block;
   width: 100%;
   height: 100%;
   background-image:
@@ -40,14 +41,27 @@ main{
   margin: 0px 60px 10px;
 }
 
+footer{
+  margin: 0px 60px 10px;
+}
+
 .navbar{
   position: sticky;
-  top: 90%;
+  top: 88%;
   width: 100%;
   height: 10%;
   background-color: rgb(0, 0, 0);
-
   text-align: center;
-  padding-top: 20px;
-   
+  padding-top: 20px;   
 }
+
+.navbar ul{
+  text-align: center;
+  padding: 0;
+}
+
+.navbar ul p{
+  display: inline-block;
+
+}
+
