--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 body {
+    margin-top: 40px;
+    overflow-y: hidden;
     background-color: black;
     background-image:
     radial-gradient(
@@ -28,17 +30,23 @@ body::after{
   );
 }
 
+.navbar{
+  color: white;
+    font: 1.3rem Inconsolata, monospace;
+    text-shadow: 0 0 5px #C8C8C8;
+}
+
 ::selection {
   background: #0080FF;
   text-shadow: none;
 }
 
 header{
-  margin: 0px 5em 10px;
+  margin: 0px 60px 10px;
 }
 
 main{
-  margin: 0px 60px 10px;
+  margin: 0px 40px 10px;
 }
 
 footer{
@@ -46,22 +54,27 @@ footer{
 }
 
 .navbar{
-  position: sticky;
-  top: 88%;
-  width: 100%;
-  height: 10%;
+  position: absolute;
+  top: 93%;
+  left: 0%;
+  width: 100vw;
+  height: 10vh;
   background-color: rgb(0, 0, 0);
   text-align: center;
-  padding-top: 20px;   
+  padding-inline-start: 0px;
+  padding-top: 0px;
+  padding-left: 0px;   
 }
 
 .navbar ul{
+  top: 50%;
+  margin: 0px;
+  padding: 0px;
+  padding-inline-start: 0px;
   text-align: center;
-  padding: 0;
 }
 
 .navbar ul p{
   display: inline-block;
-
 }
 
