--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
+/* https://css-tricks.com/old-timey-terminal-styling/ with a handful of tweaks...*/
+
 body {
-    margin-top: 2em;
     overflow-y: hidden;
     background-color: black;
     background-image:
@@ -41,16 +42,14 @@ body::after{
   text-shadow: none;
 }
 
-header{
-  margin: 0px 60px 10px;
+.terminal{
+  margin: 4em 10em 0em;
+  padding: 1em;
+
 }
 
-main{
-  margin: 0px 40px 10px;
-}
-
-footer{
-  margin: 0px 60px 10px;
+.dice-header{
+  display: inline-flex;
 }
 
 .navbar{
