--- a/styles.css
+++ b/styles.css
@@ -15,12 +15,13 @@ body {
 }
 
 body::after{
+  pointer-events: none;
   content: "";
   position: absolute;
   top: 0;
   display: inline-block;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background-image:
    repeating-linear-gradient(
   0deg,
@@ -29,6 +30,28 @@ body::after{
   transparent 1px,
   transparent 2px
   );
+}
+
+.animated {
+    -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+}
+
+@-webkit-keyframes fadeIn {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  0% {opacity: 0;}
+  100% {opacity: 1;}
+}
+
+.fadeIn {
+  -webkit-animation-name: fadeIn;
+  animation-name: fadeIn;
 }
 
 .navbar{
