--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* https://css-tricks.com/old-timey-terminal-styling/ with a handful of tweaks...*/
+/* https://css-tricks.com/old-timey-terminal-styling/ with a metric ton of tweaks...*/
 
 body {
     overflow-y: hidden;
@@ -54,10 +54,16 @@ body::after{
   animation-name: fadeIn;
 }
 
-.navbar{
-  color: white;
-    font: 1.3rem Inconsolata, monospace;
-    text-shadow: 0 0 5px #C8C8C8;
+#navbar{
+    position: fixed;
+  top: 93%;
+  left: 0%;
+  width: 100vw;
+  height: 86px;
+  background-color: rgb(0, 0, 0);
+  padding-inline-start: 0px;
+  padding-top: 0px;
+  padding-left: 0px; 
 }
 
 ::selection {
@@ -83,20 +89,10 @@ body::after{
   visibility: hidden;
 }
 
-.navbar{
-  position: fixed;
-  top: 93%;
-  left: 0%;
-  width: 100vw;
-  height: 10vh;
-  background-color: rgb(0, 0, 0);
-  text-align: center;
-  padding-inline-start: 0px;
-  padding-top: 0px;
-  padding-left: 0px;   
-}
-
-.navbar ul{
+#navbar-ul{
+  color: lime;
+  font: 1.3rem Inconsolata, monospace;
+  text-shadow: 0 0 5px limegreen;
   top: 50%;
   margin: 0px;
   padding: 0px;
