--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,7 @@
-/* https://css-tricks.com/old-timey-terminal-styling/ with a metric ton of tweaks...*/
+/* 
+  https://css-tricks.com/old-timey-terminal-styling/ with a metric ton of tweaks...
+  https://www.tutorialspoint.com/css/css_animation_fade_in.htm see above, but fewer than a metric ton.
+*/
 
 body {
     overflow-y: hidden;
@@ -66,6 +69,18 @@ body::after{
   padding-left: 0px; 
 }
 
+#landing-title{
+  display: block;
+}
+
+#landing-title h3{
+  margin-bottom: 4px;
+}
+
+#landing-title h1{
+  margin-top: 4px;
+}
+
 ::selection {
   background: #0080FF;
   text-shadow: none;
@@ -89,7 +104,11 @@ body::after{
   visibility: hidden;
 }
 
-#navbar-ul{
+.centered{
+  text-align:center;
+}
+
+#navbar ul{
   color: lime;
   font: 1.3rem Inconsolata, monospace;
   text-shadow: 0 0 5px limegreen;
@@ -98,9 +117,14 @@ body::after{
   padding: 0px;
   padding-inline-start: 0px;
   text-align: center;
+
 }
 
-.navbar ul p{
+#navbar ul p{
+  text-decoration-line: underline;
   display: inline-block;
+  text-align: center;
+
 }
+
 
